Fixed menu alignment to right. Fixed dropdown color and alignment

--- a/assets/src/scss/_theme.scss
+++ b/assets/src/scss/_theme.scss
@@ -2,12 +2,8 @@
 
 header{
     background-color:$primary;
-    a{
-        color:$white;
-    }
     ul li{
         list-style:none;
-        display:inline;
     }
     nav {
         width:100%;
